--- a/client/package.json
+++ b/client/package.json
@@ -56,7 +56,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.0.18"
+    "tailwindcss": "^3.4.3"
   }
 }
